# opium

./: CMakeLists.txt  armstrong.c  armstrong1.c  bubblesort.c  compliment.c  div_by_5_11.c  fop.c  function1.c  gcd.c  insertion.c  leapyear.c  linearsearch.c  mystrcat.c  oddeven.c  p1.c  p10.c  p2.c  p3.c  p4.c  poiners.c  prime.c  recursion.c  series.c  series1.c  star.c  struct1.c  sumofeven.c  test.c
