cmake_minimum_required(VERSION 3.29)
project(untitled C)

set(CMAKE_C_STANDARD 11)
add_executable(test test.c)
add_executable(function1 function1.c)
add_executable(struct1 struct1.c)
#[[
add_executable(main main.c)
add_executable(fop fop.c)
add_executable(parth parth.c)
add_executable(div_by_5_11 div_by_5_11.c)
add_executable(gcd gcd.c)
add_executable(armstrong armstrong.c)
add_executable(oddeven oddeven.c)
add_executable(prime prime.c)

add_executable(series series.c)
add_executable(series1 series1.c)
add_executable(pointers poiners.c)
add_executable(p10 p10.c)
add_executable(armstrong1 armstrong1.c)
add_executable(star star.c)
add_executable(compliment compliment.c)
add_executable(recursion recursion.c)
add_executable(fop fop.c)
add_executable(p2 p2.c)
add_executable(p3 p3.c)
add_executable(p4 p4.c)
add_executable(linearsearch linearsearch.c)
add_executable(leapyear leapyear.c)
add_executable(sumofeven sumofeven.c)
add_executable(bubblesort bubblesort.c)
]]